--- a/app/src/sass/elements/_globalcss.scss
+++ b/app/src/sass/elements/_globalcss.scss
@@ -17,7 +17,7 @@
 		// 	}
 		// }
 		button.slick-arrow {
-			top: 35px;
+			top: 0;
 			background: #f9f9f9;
 			margin-top: 0;
 			line-height: 80px;
@@ -53,6 +53,7 @@
 					top: 25px;
 					left: 15px;
 					font-weight: 900;
+					color: #202020;
 					@media (max-width: 992px) {
 						// top: 16px;
 						top: 22px;
